Do not use ipython

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,5 +37,5 @@ jobs:
       cd OCP && \
       cat makefile && \
       make -j -n && \
-      make test
+      python -c"import OCP"
     displayName: 'Compile'
