Use latest pybind11

--- a/env.yml
+++ b/env.yml
@@ -23,7 +23,7 @@ dependencies:
   - occt=7.3.0=h9de314b_0
   - openssl=1.0.2p=h470a237_0
   - pip=18.0=py36_1
-  - pybind11=2.2.3=py36_0
+  - pybind11=2.4.3
   - python=3.6.6=h5001a0f_0
   - readline=7.0=haf1bffa_1
   - setuptools=40.2.0=py36_0
