--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,8 @@ jobs:
   timeoutInMinutes: 360
   pool:
     vmImage: 'ubuntu-16.04'
+  variables:
+    n_cores: 4
   steps:
   - template: conda-enable.yml@templates
 
@@ -30,14 +32,15 @@ jobs:
 
   - bash: |
       source activate cpp-py-bindgen && \
-      python -m bindgen -n 2 parse ocp.toml out.pkl && \
-      python -m bindgen -n 2 transform ocp.toml out.pkl out_f.pkl && \
-      python -m bindgen -n 2 generate ocp.toml out_f.pkl
+      python -m bindgen -n $(n_cores) parse ocp.toml out.pkl && \
+      python -m bindgen -n $(n_cores) transform ocp.toml out.pkl out_f.pkl && \
+      python -m bindgen -n $(n_cores) generate ocp.toml out_f.pkl
     displayName: 'Generate'
 
   - bash: |
       source activate cpp-py-bindgen && \
       cd OCP && \
-      make -j 2 -k && \
+      make -j $(n_cores) -k && \
+      make check && \
       python -c"import OCP"
     displayName: 'Compile'
