--- a/env.yml
+++ b/env.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
 dependencies:
   - clangdev=6
-  - occt=7.3.0
+  - occt=7.3.0=hb84612a_1001
   - pybind11=2.4.3
   - python=3.6
   - joblib
