Use nm for listing symbols

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
 
   - bash: |
       source activate cpp-py-bindgen && \
-      objdump -TC $CONDA_PREFIX/lib/libTK*.so
+      nm -gDC $CONDA_PREFIX/lib/libTK*.so
     displayName: 'List symbols'
 
   - bash: |
