--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,5 +77,5 @@ jobs:
       source activate cpp-py-bindgen && \
       cd OCP && \
       LD_LIBRARY_PATH=$CONDA_PREFIX/lib ldd OCP*.so && \
-      LD_DEBUG=libs python -c"import OCP" && \
+      LD_DEBUG=libs python -c"import OCP"
     displayName: 'Test'
