--- a/ocp.toml
+++ b/ocp.toml
@@ -249,7 +249,7 @@ modules = ["Standard",
 "StdDrivers",
 "StdObject",
 "StdPersistent",
-"ShapePersistent",
+#"ShapePersistent", #Need to implement inner typdefs parsing to wrap this properly
 "StdStorage",
 "RWStl",
 "StlAPI",
@@ -538,9 +538,9 @@ byref_types = ["Standard_Real","Standard_Integer","Standard_Boolean"]
             
         [Modules.Font.Classes.Font_BRepTextBuilder.additional_methods.Perform]
         
-            body = "[]( Font_BRepTextBuilder & self , const char* path, double size, const char* text){ auto font = Font_BRepFont(path,size); return self.Perform(font,text);}"
+            body = "[]( Font_BRepTextBuilder & self , const char* path, double size, Font_FontAspect aspect, const char* text){ auto font = Font_BRepFont(path,aspect,size); return self.Perform(font,text);}"
             help = "Render text as BRep shape."
-            arguments  = ["Font path","Font size","Text"]                
+            arguments  = ["Font path","Font size","Font style","Text"]                
 
     [Modules.Select3D]
 
@@ -553,6 +553,7 @@ byref_types = ["Standard_Real","Standard_Integer","Standard_Boolean"]
 
     [Modules.AdvApprox]
 
+        exclude_classes = ["AdvApprox_EvaluatorFunction"]
         exclude_methods = ['AdvApprox_EvaluatorFunction::Evaluate']
 
     [Modules.BVH]
@@ -629,7 +630,6 @@ byref_types = ["Standard_Real","Standard_Integer","Standard_Boolean"]
 
         exclude_methods = ["RWStl_Reader::ReadAscii"]
 
-
     [Modules.StepShape]
 
         include_header_pre = """#include <StepRepr_RepresentationContext.hxx>"""
@@ -645,3 +645,54 @@ byref_types = ["Standard_Real","Standard_Integer","Standard_Boolean"]
     [Modules.BRepBlend]
 
         exclude_methods = ["BRepBlend_AppSurface::TolReached"]
+        
+    [Modules.StdPersistent]
+    
+        include_header_pre = """using ItemLocation = StdPersistent_TopLoc::ItemLocation;
+using Datum3D = StdPersistent_TopLoc::Datum3D;"""
+
+    [Modules.AppCont]
+    
+        exclude_methods = ["AppCont_Function::PeriodInformation"]
+        
+    [Modules.ShapePersistent]
+        
+        include_header_pre = """using Curve3D = ShapePersistent_BRep::Curve3D;
+using CurveOn2Surfaces = ShapePersistent_BRep::CurveOn2Surfaces;
+using CurveOnClosedSurface = ShapePersistent_BRep::CurveOnClosedSurface;
+using CurveOnSurface = ShapePersistent_BRep::CurveOnSurface;
+using CurveRepresentation = ShapePersistent_BRep::CurveRepresentation;
+using GCurve = ShapePersistent_BRep::GCurve;
+using PointOnCurve = ShapePersistent_BRep::PointOnCurve;
+using PointOnCurveOnSurface = ShapePersistent_BRep::PointOnCurveOnSurface;
+using PointOnSurface = ShapePersistent_BRep::PointOnSurface;
+using PointRepresentation = ShapePersistent_BRep::PointRepresentation;
+using PointsOnSurface = ShapePersistent_BRep::PointsOnSurface;
+using Polygon3D = ShapePersistent_BRep::Polygon3D;
+using PolygonOnClosedSurface = ShapePersistent_BRep::PolygonOnClosedSurface;
+using PolygonOnClosedTriangulation = ShapePersistent_BRep::PolygonOnClosedTriangulation;
+using PolygonOnSurface = ShapePersistent_BRep::PolygonOnSurface;
+using PolygonOnTriangulation = ShapePersistent_BRep::PolygonOnTriangulation;
+#include <Geom2d_AxisPlacement.hxx>
+#include <Geom2d_BSplineCurve.hxx>
+#include <Geom2d_BezierCurve.hxx>
+#include <Geom2d_BoundedCurve.hxx>
+#include <Geom2d_CartesianPoint.hxx>
+#include <Geom2d_Circle.hxx>
+#include <Geom2d_Conic.hxx>
+#include <Geom2d_Curve.hxx>
+#include <Geom2d_Direction.hxx>
+#include <Geom2d_Ellipse.hxx>
+#include <Geom2d_Geometry.hxx>
+#include <Geom2d_Hyperbola.hxx>
+#include <Geom2d_Line.hxx>
+#include <Geom2d_OffsetCurve.hxx>
+#include <Geom2d_Parabola.hxx>
+#include <Geom2d_Point.hxx>
+#include <Geom2d_Transformation.hxx>
+#include <Geom2d_TrimmedCurve.hxx>
+#include <Geom2d_UndefinedDerivative.hxx>
+#include <Geom2d_UndefinedValue.hxx>
+#include <Geom2d_Vector.hxx>
+#include <Geom2d_VectorWithMagnitude.hxx>
+"""
