Update env to use OCCT 7.4

--- a/env.yml
+++ b/env.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
 dependencies:
   - clangdev=6
-  - occt=7.3.0=h68d7f11_1
+  - occt=7.4.0
   - pybind11=2.4.3
   - python=3.6
   - joblib
