--- a/ocp.toml
+++ b/ocp.toml
@@ -316,7 +316,7 @@ exclude = ["Standard_Handle.hxx","Standard",
            "Geom2dToIGES","BRepGProp_Gauss.hxx","BRepLib_CheckCurveOnSurface.hxx",
            "BVH_Types.hxx","BVH_RadixSorter.hxx","BVH_IndexedBoxSet.hxx",
            "Aspect_VKeySet.hxx","BOPTools_PairSelector.hxx","AIS_DataMapOfSelStat.hxx",
-           "AIS_DataMapIteratorOfDataMapOfSelStat.hxx"]
+           "AIS_DataMapIteratorOfDataMapOfSelStat.hxx","BOPDS_Iterator.hxx"]
 
 exceptions = ["Standard_Failure"]
 
@@ -492,7 +492,7 @@ byref_types = ["Standard_Real","Standard_Integer","Standard_Boolean"]
 
     [Modules.BOPTools]
 
-        exclude_typedefs = ["BOPTools_BoxBndTree","BOPTools_PairSelector","BOPTools_Box2dTree","BOPTools_PairSelector","BOPTools_Box2dPairSelector"]
+        exclude_typedefs = ["BOPTools_BoxBndTree","BOPTools_PairSelector","BOPTools_Box2dTree","BOPTools_BoxPairSelector","BOPTools_Box2dPairSelector"]
 
     [Modules.Aspect]
 
@@ -510,6 +510,7 @@ byref_types = ["Standard_Real","Standard_Integer","Standard_Boolean"]
     [Modules.OpenGl]
 
         include_header_pre = "#include <Message_Messenger.hxx>"
+        exclude_methods = ["OpenGl_GlCore11::glGetPointerv"]
         exclude_typedefs = ["OpenGl_SequenceOfLayers","OpenGl_SetterList","OpenGl_MapOfHatchStylesAndIds","OpenGl_MapOfZLayerSettings","OpenGl_IndexedMapOfStructure","OpenGl_MapOfShaderPrograms","OpenGl_IndexedMapOfStructure","OpenGl_LayerSeqIds"]
 
     [Modules.StdSelect]
